--- a/locales/ru.json
+++ b/locales/ru.json
@@ -3,6 +3,8 @@
     "nav-item-main": "Главная",
     "nav-item-foto": "Фотогалерея",
     "nav-item-zapch": "Подбор запчастей",
+    "nav-item-EVA": "Эвакуатор",
+    "nav-item-TS": "Топливная система",
     "nav-item-gbo": "Установка ГБО",
     "nav-item-serv": "Услуги",
     "nav-item-dvig": "Двигатель",
@@ -322,5 +324,103 @@
     "dvigatel-list2": "Замена поршневой группы, вкладышей, прокладок.",
     "dvigatel-list3": "Замена масла в двигателе.",
     "dvigatel-list4": "Чистка, замена картриджа, восстановление.",
-    "dvigatel-list5": "Устранение перебоев в работе, улучшение запуска"
+    "dvigatel-list5": "Устранение перебоев в работе, улучшение запуска",
+    "hero-title-eva": "ЭВАКУАТОР ПАВЛОГРАД",
+    "hero-content-eva1": "Быстрая подача эвакуатора.",
+    "hero-content-eva2": "Надежная транспортировка авто.",
+    "hero-content-eva3": "Гарантия качества услуг!",
+    "details-hero-btn-eva": "ЗАКАЗАТЬ ЭВАКУАТОР",
+    "evacuator-section-p-eva1": "Автомобиль, как и любое транспортное средство, может попасть в дорожную аварию, заглохнуть в самый неподходящий момент или на оживленном участке дороги. А еще у него может элементарно закончиться топливо. Итог - складывается ситуация, когда дальнейшее самостоятельное передвижение становится невозможным и требуется срочная эвакуация.",
+    "evacuator-section-p-eva2": "Если неприятность случилась с вами в Павлограде или Днепропетровской области - быстро придем на помощь! В любой момент вы можете вызвать эвакуатор службы «Каскад». Вызов будет мгновенно принят нашими диспетчерами, и уже через 20-30 минут эвакуатор прибудет к вам.",
+    "evacuator-section-p-eva3": "Заказ эвакуационной техники можно по телефону. Рекомендуется сообщить нам:",
+    "evacuator-section-h3-eva1": "Служба эвакуации в Павлограде",
+    "evacuator-section-h3-eva2": "Как заказать эвакуатор в Павлограде?",
+    "evacuator-benefits-list-p-eva1": "Марку и модель вашего авто",
+    "evacuator-benefits-list-p-eva2": "Массу и габаритные размеры",
+    "evacuator-benefits-list-p-eva3": "Место нахождения автомобиля",
+    "evacuator-benefits-list-p-eva4": "Тип возникшей проблемы",
+    "evacuator-benefits-list-p-eva5": "Адрес доставки автомобиля",
+    "evacuator-section-p-eva4": "Это поможет нам выбрать оптимальную технику для вашего случая.",
+    "evacuator-section-h3-eva3": "Надежность и безопасность перевозки",
+    "evacuator-section-p-eva5": "Мы гарантируем безопасность перевозки поврежденного автомобиля. После подъема на платформу транспортное средство жестко фиксируется с помощью крепежных элементов и специальных ремней. Время погрузки зависит от сложности ситуации - при блокировке колес или других проблемах может потребоваться дополнительное оборудование.",
+    "evacuator-section-h3-eva4": "Какие транспортные средства мы эвакуируем?",
+    "evacuator-section-p-eva6": "Наша служба эвакуации в Павлограде обслуживает все типы транспортных средств:",
+    "evacuator-benefits-list-p-eva6": "Легковые автомобили всех марок",
+    "evacuator-benefits-list-p-eva7": "Внедорожники и джипы",
+    "evacuator-benefits-list-p-eva8": "Микроавтобусы и автобусы",
+    "evacuator-benefits-list-p-eva9": "Грузовые автомобили до 5 тонн",
+    "evacuator-benefits-list-p-eva10": "Мотоциклы и квадроциклы",
+    "evacuator-benefits-list-p-eva11": "Сельскохозяйственную технику",
+    "evacuator-section-h3-eva5": "Преимущества службы эвакуации «Каскад»",
+    "evacuator-section-h3-eva6": "Эвакуатор в Павлограде - надежная помощь на дороге",
+    "evacuator-section-h4-eva1": "Работаем каждый день",
+    "evacuator-section-h4-eva2": "Быстрая подача",
+    "evacuator-section-h4-eva3": "Опытные водители",
+    "evacuator-section-p-eva7": "Работаем всю неделю, включая выходные и праздничные дни",
+    "evacuator-section-p-eva8": "Время подачи эвакуатора по Павлограду - до 30 минут",
+    "evacuator-section-p-eva9": "Все водители имеют многолетний стаж работы",
+    "evacuator-section-p-eva10": "Служба эвакуации «Каскад» в Павлограде предлагает профессиональные услуги по транспортировке автомобилей. Мы специализируемся на эвакуации легковых и грузовых автомобилей, внедорожников, микроавтобусов и специальной техники.",
+    "evacuator-section-p-eva11": "Если вам нужен эвакуатор в Павлограде, вы обратились по адресу. Мы работаем по всей Днепропетровской области, включая соседние населенные пункты. Наши услуги особенно востребованы при ДТП, технических неисправностях, заблокированных колесах, а также для транспортировки новых автомобилей из салонов.",
+    "evacuator-section-p-eva12": "Что делать при поломке автомобиля? Сохраняйте спокойствие и вызывайте эвакуатор службы «Каскад». Установите аварийный знак, включите аварийную сигнализацию и отойдите на безопасное расстояние. Наши диспетчеры проконсультируют вас по всем вопросам и направят ближайший свободный эвакуатор.",
+    "evacuator-price-section-h2-eva1": "Цены на услуги эвакуатора в Павлограде",
+    "evacuator-price-section-th": "Наименование услуг:",
+    "evacuator-price-section-thh": "Цена от, грн.",
+    "evacuator-price-section-th1": "Легковое авто",
+    "evacuator-price-section-th2": "Джип, Бус",
+    "evacuator-price-section-th3": "Мини спец техника",
+    "evacuator-price-section-th4": "Негабарит",
+    "evacuator-price-section-th41": "Договорная",
+    "hero-title-TS": "ОБСЛУЖИВАНИЕ СИСТЕМ ОХЛАЖДЕНИЯ",
+    "hero-content-TS1": "Возвращаем тепло быстро!",
+    "hero-content-TS2": "Профессиональное оборудование.",
+    "hero-content-TS3": "Для всех марок.",
+    "details-hero-btn-TS": "ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ",
+    "TS-section-h21": "Промывка систем охлаждения — ",
+    "TS-section-h21span": "забота о сердце вашего автомобиля",
+    "TS-content-text-p1": "Система охлаждения занимает важное место в «здоровье» автомобиля.",
+    "TS-content-text-p2": "Именно от ее исправной работы напрямую зависит долговечность и стабильность работы двигателя — самого дорогого агрегата в вашей машине.",
+    "TS-content-text-p3": "Когда система загрязнена, возникают критические проблемы:",
+    "TS-content-benefits-list-p1": "Перегрев двигателя — риск деформации головки блока цилиндров",
+    "TS-content-benefits-list-p2": "Потеря мощности и увеличение расхода топлива",
+    "TS-content-benefits-list-p3": "Преждеременный износ поршневой группы и цилиндров",
+    "TS-content-benefits-list-p4": "Отказ печки — в салоне холодно даже при работающем двигателе",
+    "TS-content-text-p4": "Регулярная промывка системы охлаждения — это не просто «комфорт в салоне», это сервисное обслуживание, которое предотвращает капитальный ремонт двигателя стоимостью в тысячи гривен. Чистая система обеспечивает оптимальный теплообмен, защищает алюминиевые детали от коррозии и гарантирует стабильную работу мотора в любых условиях.",
+    "TS-content-text-p5": "Как мы промываем систему охлаждения и радиатор печки",
+    "TS-content-text-p6": "Процесс промывки системы охлаждения",
+    "TS-section-h22": "Услуги по обслуживанию",
+    "TS-section-h22span": "системы охлаждения:",
+    "service-TS-h3": "Промывка системы охлаждения",
+    "TS-content-text-p7": "Комплексная очистка всей системы специальным оборудованием. Улучшает циркуляцию и теплообмен.",
+    "TS-content-text-price1": "от 500 грн",
+    "TS-content-text-price2": "от 700 грн",
+    "TS-content-text-price3": "от 400 грн",
+    "TS-content-text-price4": "от 600 грн",
+    "service-TS-h3-card2": "Чистка радиатора печки",
+    "service-TS-h3-card3": "Замена антифриза",
+    "service-TS-h3-card4": "Комплексное обслуживание",
+    "TS-content-text-p8": "Специальная промывка радиатора отопителя для восстановления тепла и уюта в салоне.",
+    "TS-content-text-p9": "Слив старой жидкости, промывка и замена на качественный антифриз с гарантией.",
+    "TS-content-text-p10": "Промывка системы + замена антифриза + диагностика всех элементов + удаление воздушных пробок.",
+    "TS-section-h23": "Обслуживание",
+    "TS-section-h23span": "системы",
+    "TS-section-h23span2": "охлаждения",
+    "TS-section-h23span3": "автомобиля",
+    "TS-seo-content-h31": "Почему печка не греет? Основные причины",
+    "TS-seo-content-h32": "Как мы решаем проблему в автосервисе «Каскад»",
+    "TS-seo-content-h33": "Преимущества профессиональной промывки в Павлограде",
+    "TS-seo-content-p1": "Если в салоне вашего автомобиля стало холодно, печка дует прохладным воздухом или температура двигателя скачет — вам нужна диагностика системы охлаждения в Павлограде. В автосервисе «Каскад» мы специализируемся на решении именно этих проблем.",
+    "TS-seo-content-p2": "Чаще всего владельцы автомобилей в Павлограде сталкиваются со следующими проблемами:",
+    "TS-seo-content-p3": "Наш автосервис в Павлограде предлагает комплексный подход к обслуживанию системы охлаждения. Мы используем оборудование для диагностики и промывки, которое позволяет точно определить проблему и эффективно ее устранить. В отличие от многих других сервисов, мы не ограничиваемся простой заменой антифриза, а проводим полную аппаратную промывку всей системы охлаждения.",
+    "TS-seo-content-p4": "Процесс начинается с компьютерной диагностики и замера температурного режима двигателя, которая помогает выявить скрытые проблемы: состояние термостата, работу помпы, наличие воздушных пробок и степень загрязнения радиаторов. После диагностики мы подключаем специальную промывочную установку, которая циркулирует профессиональные очищающие составы под контролируемым давлением по всем каналам системы. Это позволяет удалить не только видимые отложения, но и глубокую накипь в труднодоступных местах радиатора печки и основного радиатора охлаждения.",
+    "TS-seo-content-p5": "Регулярное обслуживание системы охлаждения в автосервисе «Каскад» позволяет не только восстановить тепло в салоне, но и предотвратить серьезные поломки двигателя. Чистая система охлаждения обеспечивает стабильный тепловой режим работы двигателя внутреннего сгорания , что особенно важно в условиях украинского климата с его резкими перепадами температур. Правильно работающая система охлаждения увеличивает ресурс двигателя и снижает расход топлива за счет оптимального температурного режима.",
+    "TS-seo-content-p6": "Мы используем только оригинальные антифризы проверенных брендов, которые соответствуют спецификациям производителей автомобилей. После промывки и замены жидкости мы обязательно проводим тестовую проверку работы печки и контроля температуры двигателя в различных режимах эксплуатации. Это гарантирует, что после нашего обслуживания вы забудете о проблемах с обогревом салона и перегревом двигателя на долгое время.",
+    "TS-seo-content-li1": "Загрязнение радиатора печки",
+    "TS-seo-content-li11": " — самая распространенная причина отсутствия тепла в салоне",
+    "TS-seo-content-li2": "Воздушные пробки",
+    "TS-seo-content-li21": " в системе охлаждения",
+    "TS-seo-content-li3": "Выработка ресурса антифриза",
+    "TS-seo-content-li31": " — жидкость теряет свои свойства за 2-3 года",
+    "TS-seo-content-li4": "Зашлакованные радиаторы",
+    "TS-seo-content-li41": " и обратки магистрали системы охлаждения",
+    "evacuator-price-section-h2-eva17": "Услуги эвакуатора"
   }
