--- a/locales/uk.json
+++ b/locales/uk.json
@@ -3,6 +3,8 @@
     "nav-item-main": "Головна",
     "nav-item-foto": "Фотогалерея",
     "nav-item-zapch": "Підбір запчастин",
+    "nav-item-EVA": "Евакуатор",
+    "nav-item-TS": "Паливна система",
     "nav-item-gbo": "Встановлення ГБО",
     "nav-item-serv": "Послуги",
     "nav-item-dvig": "Двигун",
@@ -322,5 +324,103 @@
   "dvigatel-list2": "Заміна поршневої групи, вкладишів, прокладок.",
   "dvigatel-list3": "Заміна масла у двигуні.",
   "dvigatel-list4": "Чистка, заміна картриджа, відновлення.",
-  "dvigatel-list5": "Усунення перебоїв у роботі, покращення запуску."
-  }
+  "dvigatel-list5": "Усунення перебоїв у роботі, покращення запуску.",
+  "hero-title-eva": "ЕВАКУАТОР ПАВЛОГРАД",
+"hero-content-eva1": "Швидка подача евакуатора.",
+"hero-content-eva2": "Надійна транспортування авто.",
+"hero-content-eva3": "Гарантія якості послуг!",
+"details-hero-btn-eva": "ЗАМОВИТИ ЕВАКУАТОР",
+"evacuator-section-p-eva1": "Автомобіль, як і будь-який транспортний засіб, може потрапити в дорожню аварію, заглохнути в найнепідходящий момент чи на завантаженій ділянці дороги. А ще в нього може елементарно закінчитися паливо. Підсумок - складається ситуація, коли подальше самостійне пересування стає неможливим і потрібна термінова евакуація.",
+"evacuator-section-p-eva2": "Якщо неприємність трапилася з вами в Павлограді чи Дніпропетровській області - швидко прийдемо на допомогу! У будь-який момент ви можете викликати евакуатор служби «Каскад». Виклик буде миттєво прийнятий нашими диспетчерами, і вже через 20-30 хвилин евакуатор прибуде до вас.",
+"evacuator-section-p-eva3": "Замовити евакуаційну техніку можна за телефоном. Рекомендується повідомити нам:",
+"evacuator-section-h3-eva1": "Служба евакуації в Павлограді",
+"evacuator-section-h3-eva2": "Як замовити евакуатор у Павлограді?",
+"evacuator-benefits-list-p-eva1": "Марку та модель вашого авто",
+"evacuator-benefits-list-p-eva2": "Масу та габаритні розміри",
+"evacuator-benefits-list-p-eva3": "Місце знаходження автомобіля",
+"evacuator-benefits-list-p-eva4": "Тип виниклої проблеми",
+"evacuator-benefits-list-p-eva5": "Адресу доставки автомобіля",
+"evacuator-section-p-eva4": "Це допоможе нам обрати оптимальну техніку для вашого випадку.",
+"evacuator-section-h3-eva3": "Надійність та безпека перевезення",
+"evacuator-section-p-eva5": "Ми гарантуємо безпеку перевезення пошкодженого автомобіля. Після підйому на платформу транспортний засіб жорстко фіксується за допомогою кріпильних елементів та спеціальних ременів. Час завантаження залежить від складності ситуації - при блокуванні коліс чи інших проблемах може знадобитися додаткове обладнання.",
+"evacuator-section-h3-eva4": "Які транспортні засоби ми евакуюємо?",
+"evacuator-section-p-eva6": "Наша служба евакуації в Павлограді обслуговує всі типи транспортних засобів:",
+"evacuator-benefits-list-p-eva6": "Легкові автомобілі всіх марок",
+"evacuator-benefits-list-p-eva7": "Позашляховики та джипи",
+"evacuator-benefits-list-p-eva8": "Мікроавтобуси та автобуси",
+"evacuator-benefits-list-p-eva9": "Вантажні автомобілі до 5 тонн",
+"evacuator-benefits-list-p-eva10": "Мотоцикли та квадроцикли",
+"evacuator-benefits-list-p-eva11": "Сільськогосподарську техніку",
+"evacuator-section-h3-eva5": "Переваги служби евакуації «Каскад»",
+"evacuator-section-h3-eva6": "Евакуатор у Павлограді - надійна допомога на дорозі",
+"evacuator-section-h4-eva1": "Працюємо щодня",
+"evacuator-section-h4-eva2": "Швидка подача",
+"evacuator-section-h4-eva3": "Досвідчені водії",
+"evacuator-section-p-eva7": "Працюємо цілий тиждень, включаючи вихідні та святкові дні",
+"evacuator-section-p-eva8": "Час подачі евакуатора по Павлограду - до 30 хвилин",
+"evacuator-section-p-eva9": "Усі водії мають багаторічний стаж роботи",
+"evacuator-section-p-eva10": "Служба евакуації «Каскад» у Павлограді пропонує професійні послуги з транспортування автомобілів. Ми спеціалізуємося на евакуації легкових та вантажних автомобілів, позашляховиків, мікроавтобусів та спеціальної техніки.",
+"evacuator-section-p-eva11": "Якщо вам потрібен евакуатор у Павлограді, ви звернулися за адресою. Ми працюємо по всій Дніпропетровській області, включаючи сусідні населені пункти. Наші послуги особливо затребувані при ДТП, технічних несправностях, заблокованих колесах, а також для транспортування нових автомобілів з салонів.",
+"evacuator-section-p-eva12": "Що робити при поломці автомобіля? Зберігайте спокій та викликайте евакуатор служби «Каскад». Встановіть аварійний знак, увімкніть аварійну сигналізацію та відійдіть на безпечну відстань. Наші диспетчери проконсультують вас з усіх питань та направлять найближчий вільний евакуатор.",
+"evacuator-price-section-h2-eva1": "Ціни на послуги евакуатора у Павлограді",
+"evacuator-price-section-th": "Найменування послуг:",
+"evacuator-price-section-thh": "Ціна від, грн.",
+"evacuator-price-section-th1": "Легкове авто",
+"evacuator-price-section-th2": "Джип, Бус",
+"evacuator-price-section-th3": "Міні спец техніка",
+"evacuator-price-section-th4": "Негабарит",
+"evacuator-price-section-th41": "Договірна",
+    "hero-title-TS": "ОБСЛУЖУВАННЯ СИСТЕМ ОХОЛОДЖЕННЯ",
+    "hero-content-TS1": "Повертаємо тепло швидко!",
+    "hero-content-TS2": "Професійне обладнання.",
+    "hero-content-TS3": "Для всіх марок.",
+    "details-hero-btn-TS": "ОТРИМАТИ КОНСУЛЬТАЦІЮ",
+    "TS-section-h21": "Промивка систем охолодження — ",
+    "TS-section-h21span": "турбота про серце вашого автомобіля",
+    "TS-content-text-p1": "Система охолодження займає важливе місце у «здоров'ї» автомобіля.",
+    "TS-content-text-p2": "Саме від її справної роботи безпосередньо залежить довговічність та стабільність роботи двигуна — найдорогого агрегату у вашому авто.",
+    "TS-content-text-p3": "Коли система забруднена, виникають критичні проблеми:",
+    "TS-content-benefits-list-p1": "Перегрів двигуна — ризик деформації головки блоку циліндрів",
+    "TS-content-benefits-list-p2": "Втрата потужності та збільшення витрати палива",
+    "TS-content-benefits-list-p3": "Передчасне зношування поршневої групи та циліндрів",
+    "TS-content-benefits-list-p4": "Відмопа пічки — у салоні холодно навіть при працюючому двигуні",
+    "TS-content-text-p4": "Регулярна промивка системи охолодження — це не просто «комфорт у салоні», це сервісне обслуговування, яке запобігає капітальному ремонту двигуна вартістю в тисячі гривень. Чиста система забезпечує оптимальний теплообмін, захищає алюмінієві деталі від корозії та гарантує стабільну роботу мотора в будь-яких умовах.",
+    "TS-content-text-p5": "Як ми промиваємо систему охолодження та радіатор пічки",
+    "TS-content-text-p6": "Процес промивки системи охолодження",
+    "TS-section-h22": "Послуги з обслуговування",
+    "TS-section-h22span": "системи охолодження:",
+    "service-TS-h3": "Промивка системи охолодження",
+    "TS-content-text-p7": "Комплексне очищення всієї системи спеціальним обладнанням. Покращує циркуляцію та теплообмін.",
+    "TS-content-text-price1": "від 500 грн",
+    "TS-content-text-price2": "від 700 грн",
+    "TS-content-text-price3": "від 400 грн",
+    "TS-content-text-price4": "від 600 грн",
+    "service-TS-h3-card2": "Чистка радіатора пічки",
+    "service-TS-h3-card3": "Заміна антифризу",
+    "service-TS-h3-card4": "Комплексне обслуговування",
+    "TS-content-text-p8": "Спеціальна промивка радіатора опалювача для відновлення тепла та затишку в салоні.",
+    "TS-content-text-p9": "Зливання старої рідини, промивка та заміна на якісний антифриз із гарантією.",
+    "TS-content-text-p10": "Промивка системи + заміна антифризу + діагностика всіх елементів + видалення повітряних пробок.",
+    "TS-section-h23": "Обслуговування",
+    "TS-section-h23span": "системи",
+    "TS-section-h23span2": "охолодження",
+    "TS-section-h23span3": "автомобіля",
+    "TS-seo-content-h31": "Чому пічка не гріє? Основні причини",
+    "TS-seo-content-h32": "Як ми вирішуємо проблему в автосервісі «Каскад»",
+    "TS-seo-content-h33": "Переваги професійної промивки у Павлограді",
+    "TS-seo-content-p1": "Якщо в салоні вашого автомобіля стало холодно, пічка дме прохолодним повітрям або температура двигуна скаче — вам потрібна діагностика системи охолодження у Павлограді. В автосервісі «Каскад» ми спеціалізуємося на вирішенні саме цих проблем.",
+    "TS-seo-content-p2": "Найчастіше власники автомобілів у Павлограді стикаються з такими проблемами:",
+    "TS-seo-content-p3": "Наш автосервіс у Павлограді пропонує комплексний підхід до обслуговування системи охолодження. Ми використовуємо обладнання для діагностики та промивки, яке дозволяє точно визначити проблему та ефективно її усунути. На відміну від багатьох інших сервісів, ми не обмежуємося простою заміною антифризу, а проводимо повну апаратну промивку всієї системи охолодження.",
+    "TS-seo-content-p4": "Процес починається з комп'ютерної діагностики та заміру температурного режиму двигуна, яка допомагає виявити приховані проблеми: стан термостата, роботу помпи, наявність повітряних пробок та ступінь забруднення радіаторів. Після діагностики ми підключаємо спеціальну промивальну установку, яка циркулює професійні очищувальні склади під контрольованим тиском по всіх каналах системи. Це дозволяє видалити не лише видимі відкладення, але й глибокий накіп у важкодоступних місцях радіатора пічки та основного радіатора охолодження.",
+    "TS-seo-content-p5": "Регулярне обслуговування системи охолодження в автосервісі «Каскад» дозволяє не лише відновити тепло в салоні, але й запобігти серйозним поломкам двигуна. Чиста система охолодження забезпечує стабільний тепловий режим роботи двигуна внутрішнього згоряння, що особливо важливо в умовах українського клімату з його різкими перепадами температур. Правильно працююча система охолодження збільшує ресурс двигуна та знижує витрату палива за рахунок оптимального температурного режиму.",
+    "TS-seo-content-p6": "Ми використовуємо лише оригінальні антифризи перевірених брендів, які відповідають специфікаціям виробників автомобілів. Після промивки та заміни рідини ми обов'язково проводимо тестову перевірку роботи пічки та контролю температури двигуна в різних режимах експлуатації. Це гарантує, що після нашого обслуговування ви забудете про проблеми з обігрівом салону та перегрівом двигуна на довгий час.",
+    "TS-seo-content-li1": "Забруднення радіатора пічки",
+    "TS-seo-content-li11": " — найпоширеніша причина відсутності тепла в салоні",
+    "TS-seo-content-li2": "Повітряні пробки",
+    "TS-seo-content-li21": " у системі охолодження",
+    "TS-seo-content-li3": "Відпрацювання ресурсу антифризу",
+    "TS-seo-content-li31": " — рідина втрачає свої властивості за 2-3 роки",
+    "TS-seo-content-li4": "Зашлаковані радіатори",
+    "TS-seo-content-li41": " та зворотні магістралі системи охолодження",
+    "evacuator-price-section-h2-eva17": "Послуги евакуатора"
+}
