--- a/locales/uk.json
+++ b/locales/uk.json
@@ -327,7 +327,7 @@
   "dvigatel-list5": "Усунення перебоїв у роботі, покращення запуску.",
   "hero-title-eva": "ЕВАКУАТОР ПАВЛОГРАД",
 "hero-content-eva1": "Швидка подача евакуатора.",
-"hero-content-eva2": "Надійна транспортування авто.",
+"hero-content-eva2": "Надійне транспортування авто.",
 "hero-content-eva3": "Гарантія якості послуг!",
 "details-hero-btn-eva": "ЗАМОВИТИ ЕВАКУАТОР",
 "evacuator-section-p-eva1": "Автомобіль, як і будь-який транспортний засіб, може потрапити в дорожню аварію, заглохнути в найнепідходящий момент чи на завантаженій ділянці дороги. А ще в нього може елементарно закінчитися паливо. Підсумок - складається ситуація, коли подальше самостійне пересування стає неможливим і потрібна термінова евакуація.",
