--- a/locales/ru.json
+++ b/locales/ru.json
@@ -422,5 +422,26 @@
     "TS-seo-content-li31": " — жидкость теряет свои свойства за 2-3 года",
     "TS-seo-content-li4": "Зашлакованные радиаторы",
     "TS-seo-content-li41": " и обратки магистрали системы охлаждения",
-    "evacuator-price-section-h2-eva17": "Услуги эвакуатора"
+    "evacuator-price-section-h2-eva17": "Услуги эвакуатора",
+    "seasonal-offers-h2-span": "Популярные услуги",
+    "seasonal-offers-h2": " СТО КАСКАД:",
+    "seasonal-offers-h31": "Обслуживание системы охлаждения",
+    "seasonal-offers-h32": "Диагностика и ремонт двигателя",
+    "seasonal-offers-h33": "Диагностика и ремонт ходовой",
+    "seasonal-offers-price1": "от 500 грн",
+    "seasonal-offers-price2": "от 800 грн",
+    "seasonal-offers-price3": "от 600 грн",
+    "seasonal-offers-btn": "Подробнее",
+    "seasonal-offers-p1": " АКЦИЯ!",
+    "seasonal-offers-p2": "До конца месяца - скидка 15% на комплексное обслуживание!",
+    "seasonal-offers-p3": " Зима близко!",
+    "seasonal-offers-p4": "Не ждите, пока печка перестанет греть в самый неподходящий момент. Наша профессиональная промывка системы охлаждения вернет тепло в ваш салон и защитит двигатель от перегрева.",
+    "seasonal-offers-p5": " Экономьте на ремонте!",
+    "seasonal-offers-p6": "Своевременная диагностика снижает риски дорогостоящего ремонта двигателя стоимостью 40 000 грн!",
+    "seasonal-offers-p7": " Верните мощность вашему авто!",
+    "seasonal-offers-p8": "Троит двигатель? Увеличился расход топлива? Потерялась динамика? Наши специалисты точно определят причину и вернут былую мощь!",
+    "seasonal-offers-p9": " БЕЗОПАСНОСТЬ ПРЕЖДЕ ВСЕГО!",
+    "seasonal-offers-p10": "При комплексном ремонте - балансировка колес в подарок!",
+    "seasonal-offers-p11": " Комфорт на каждой дороге!",
+    "seasonal-offers-p12": "Стуки в подвеске? Машину «ведет» в сторону? Вибрация на скорости? Мы вернем уверенность в управлении и безопасность вашей семье!"
   }
