--- a/locales/uk.json
+++ b/locales/uk.json
@@ -422,5 +422,26 @@
     "TS-seo-content-li31": " — рідина втрачає свої властивості за 2-3 роки",
     "TS-seo-content-li4": "Зашлаковані радіатори",
     "TS-seo-content-li41": " та зворотні магістралі системи охолодження",
-    "evacuator-price-section-h2-eva17": "Послуги евакуатора"
+    "evacuator-price-section-h2-eva17": "Послуги евакуатора",
+    "seasonal-offers-h2-span": "Популярні послуги",
+    "seasonal-offers-h2": " СТО КАСКАД:",
+    "seasonal-offers-h31": "Обслуговування системи охолодження",
+    "seasonal-offers-h32": "Діагностика та ремонт двигуна",
+    "seasonal-offers-h33": "Діагностика та ремонт ходової",
+    "seasonal-offers-price1": "від 500 грн",
+    "seasonal-offers-price2": "від 800 грн", 
+    "seasonal-offers-price3": "від 600 грн",
+    "seasonal-offers-btn": "Детальніше",
+    "seasonal-offers-p1": " АКЦІЯ!",
+    "seasonal-offers-p2": "До кінця місяця - знижка 15% на комплексне обслуговування!",
+    "seasonal-offers-p3": " Зима близько!",
+    "seasonal-offers-p4": "Не чекайте, поки пічка перестане гріти в найнепідходящий момент. Наша професійна промивка системи охолодження поверне тепло у ваш салон і захистить двигун від перегріву.",
+    "seasonal-offers-p5": " Економте на ремонті!",
+    "seasonal-offers-p6": "Своєчасна діагностика знижує ризики дорогого ремонту двигуна вартістю 40 000 грн!",
+    "seasonal-offers-p7": " Поверніть потужність вашому авто!",
+    "seasonal-offers-p8": "Троїть двигун? Збільшилась витрата палива? Зникла динаміка? Наші фахівці точно визначать причину і повернуть колишню міць!",
+    "seasonal-offers-p9": " БЕЗПЕКА ПЕРЕДУСІМ!",
+    "seasonal-offers-p10": "При комплексному ремонті - балансування колез у подарунок!",
+    "seasonal-offers-p11": " Комфорт на кожній дорозі!",
+    "seasonal-offers-p12": "Стукіт у підвісці? Машину «веде» в сторону? Вібрація на швидкості? Ми повернемо впевненість у керуванні та безпеку вашій родині!"
 }
